--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
   <meta name="renderer" content="webkit">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-  <link rel="dns-prefetch" href="https://code2roc.github.io">
+  <link rel="dns-prefetch" href="https://code2roc.github.io" />
   <title>Hexo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta property="og:type" content="website">
@@ -16,12 +16,12 @@
 <meta property="article:author" content="John Doe">
 <meta name="twitter:card" content="summary">
   
-    <link rel="alternative" href="/atom.xml" title="Hexo" type="application/atom+xml">
+    <link rel="alternative" href="/atom.xml" title="Hexo" type="application/atom+xml" />
   
   
     <link rel="icon" href="/favicon.png">
   
-  <link rel="stylesheet" type="text/css" href="code2roc.github.io/./main.0cf68a.css">
+  <link rel="stylesheet" type="text/css" href="code2roc.github.io/./main.0cf68a.css" />
   <style type="text/css">
   
     #container.show {
